--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ types-cachetools = "^0.1.9"
 types-requests = "^2.25.0"
 pre-commit = "^2.13.0"
 uvicorn = "^0.15.0"
+sphinx-rtd-theme = "^1.0.0"
 
 [tool.poetry.extras]
 docs = ["sphinx"]
