--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ python-jose = {extras = ["cryptography"], version = ">= 3.2.0"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0.1"
-black = "^19.10b0"
+black = "21.7b0"
 pylint = "^2.6.0"
 pyjwt = "^1.7.1"
 sphinx = "^3.3.1"
@@ -41,4 +41,4 @@ build-backend = "poetry.masonry.api"
 profile = "black"
 force_single_line = "True"
 known_first_party = []
-known_third_party = ["cachetools", "cryptography", "fastapi", "jose", "jwt", "pydantic", "pytest", "requests", "starlette", "uvicorn"]
+known_third_party = ["app", "cachetools", "cryptography", "fastapi", "jose", "jwt", "pydantic", "pytest", "requests", "starlette", "uvicorn"]
